refactor: use internal copies of variables

--- a/src/components/canvas/Alert/Alert.module.scss
+++ b/src/components/canvas/Alert/Alert.module.scss
@@ -2,7 +2,7 @@
   background: var(--skin-background);
   border-radius: 0.25em;
   color: var(--skin-color);
-  padding: var(--mobius-spacing-md);
+  padding: var(--spacing-md);
 
   &__close {
     background: none;
