--- a/src/components/composition/Wrap/Wrap.module.scss
+++ b/src/components/composition/Wrap/Wrap.module.scss
@@ -3,7 +3,7 @@
 .wrap {
   margin: 0 auto;
   max-width: 90em; // 1440px
-  padding: 0 var(--mobius-spacing-md);
+  padding: 0 var(--spacing-md);
   width: 100%;
 
   @each $key, $bp in breakpoint.$map {
