--- a/src/components/controls/Label/Label.module.scss
+++ b/src/components/controls/Label/Label.module.scss
@@ -11,6 +11,6 @@
   &--type-secondary {
     align-items: flex-start;
     font-weight: normal;
-    min-height: var(--mobius-spacing-lg);
+    min-height: var(--spacing-lg);
   }
 }
