--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -44,7 +44,7 @@ h4 {
 
 p {
   line-height: font.$line-height-lg;
-  margin-bottom: var(--mobius-spacing-sm);
+  margin-bottom: var(--spacing-sm);
   margin-top: 0;
 
   &:last-child {
