--- a/src/components/composition/Grid/Grid.module.scss
+++ b/src/components/composition/Grid/Grid.module.scss
@@ -3,8 +3,7 @@
 
 .grid {
   display: flex;
-  margin: calc(var(--mobius-spacing-md) / -2)
-    calc(var(--mobius-spacing-md) / -2);
+  margin: calc(var(--spacing-md) / -2) calc(var(--spacing-md) / -2);
 
   // Wrap
   &--wrap {
@@ -18,16 +17,15 @@
   // Inset
   &--inset {
     margin: 0;
-    padding: calc(var(--mobius-spacing-md) / 2)
-      calc(var(--mobius-spacing-md) / 2);
+    padding: calc(var(--spacing-md) / 2) calc(var(--spacing-md) / 2);
   }
 
   &--inset-fluid {
-    padding: var(--mobius-spacing-fluid-sm) 0;
+    padding: var(--spacing-fluid-sm) 0;
   }
 
   &--inset-vertical-fluid {
-    padding: var(--mobius-spacing-fluid-sm) 0;
+    padding: var(--spacing-fluid-sm) 0;
   }
 
   // Direction
@@ -104,8 +102,7 @@
   &__item {
     flex: 0 0 auto;
     min-width: 0;
-    padding: calc(var(--mobius-spacing-md) / 2)
-      calc(var(--mobius-spacing-md) / 2);
+    padding: calc(var(--spacing-md) / 2) calc(var(--spacing-md) / 2);
 
     &--grow {
       flex-grow: 1;
@@ -170,42 +167,34 @@
   // Spacing
   &--spacing {
     &-xs {
-      margin: calc(var(--mobius-spacing-xs) / -2)
-        calc(var(--mobius-spacing-xs) / -2);
+      margin: calc(var(--spacing-xs) / -2) calc(var(--spacing-xs) / -2);
 
       > .grid__item {
-        padding: calc(var(--mobius-spacing-xs) / 2)
-          calc(var(--mobius-spacing-xs) / 2);
+        padding: calc(var(--spacing-xs) / 2) calc(var(--spacing-xs) / 2);
       }
     }
 
     &-sm {
-      margin: calc(var(--mobius-spacing-sm) / -2)
-        calc(var(--mobius-spacing-sm) / -2);
+      margin: calc(var(--spacing-sm) / -2) calc(var(--spacing-sm) / -2);
 
       > .grid__item {
-        padding: calc(var(--mobius-spacing-sm) / 2)
-          calc(var(--mobius-spacing-sm) / 2);
+        padding: calc(var(--spacing-sm) / 2) calc(var(--spacing-sm) / 2);
       }
     }
 
     &-lg {
-      margin: calc(var(--mobius-spacing-lg) / -2)
-        calc(var(--mobius-spacing-lg) / -2);
+      margin: calc(var(--spacing-lg) / -2) calc(var(--spacing-lg) / -2);
 
       > .grid__item {
-        padding: calc(var(--mobius-spacing-lg) / 2)
-          calc(var(--mobius-spacing-lg) / 2);
+        padding: calc(var(--spacing-lg) / 2) calc(var(--spacing-lg) / 2);
       }
     }
 
     &-xl {
-      margin: calc(var(--mobius-spacing-xl) / -2)
-        calc(var(--mobius-spacing-xl) / -2);
+      margin: calc(var(--spacing-xl) / -2) calc(var(--spacing-xl) / -2);
 
       > .grid__item {
-        padding: calc(var(--mobius-spacing-xl) / 2)
-          calc(var(--mobius-spacing-xl) / 2);
+        padding: calc(var(--spacing-xl) / 2) calc(var(--spacing-xl) / 2);
       }
     }
 
