--- a/src/components/composition/Spacing/Spacing.module.scss
+++ b/src/components/composition/Spacing/Spacing.module.scss
@@ -1,105 +1,105 @@
 .spacing {
   &--top {
     &-xs {
-      margin-top: var(--mobius-spacing-xs);
+      margin-top: var(--spacing-xs);
     }
 
     &-sm {
-      margin-top: var(--mobius-spacing-sm);
+      margin-top: var(--spacing-sm);
     }
 
     &-md {
-      margin-top: var(--mobius-spacing-md);
+      margin-top: var(--spacing-md);
     }
 
     &-lg {
-      margin-top: var(--mobius-spacing-lg);
+      margin-top: var(--spacing-lg);
     }
 
     &-xl {
-      margin-top: var(--mobius-spacing-xl);
+      margin-top: var(--spacing-xl);
     }
 
     &-fluid {
-      margin-top: var(--mobius-spacing-fluid);
+      margin-top: var(--spacing-fluid);
     }
   }
 
   &--left {
     &-xs {
-      margin-left: var(--mobius-spacing-xs);
+      margin-left: var(--spacing-xs);
     }
 
     &-sm {
-      margin-left: var(--mobius-spacing-sm);
+      margin-left: var(--spacing-sm);
     }
 
     &-md {
-      margin-left: var(--mobius-spacing-md);
+      margin-left: var(--spacing-md);
     }
 
     &-lg {
-      margin-left: var(--mobius-spacing-lg);
+      margin-left: var(--spacing-lg);
     }
 
     &-xl {
-      margin-left: var(--mobius-spacing-xl);
+      margin-left: var(--spacing-xl);
     }
 
     &-fluid {
-      margin-left: var(--mobius-spacing-fluid);
+      margin-left: var(--spacing-fluid);
     }
   }
 
   &--bottom {
     &-xs {
-      margin-bottom: var(--mobius-spacing-xs);
+      margin-bottom: var(--spacing-xs);
     }
 
     &-sm {
-      margin-bottom: var(--mobius-spacing-sm);
+      margin-bottom: var(--spacing-sm);
     }
 
     &-md {
-      margin-bottom: var(--mobius-spacing-md);
+      margin-bottom: var(--spacing-md);
     }
 
     &-lg {
-      margin-bottom: var(--mobius-spacing-lg);
+      margin-bottom: var(--spacing-lg);
     }
 
     &-xl {
-      margin-bottom: var(--mobius-spacing-xl);
+      margin-bottom: var(--spacing-xl);
     }
 
     &-fluid {
-      margin-bottom: var(--mobius-spacing-fluid);
+      margin-bottom: var(--spacing-fluid);
     }
   }
 
   &--right {
     &-xs {
-      margin-right: var(--mobius-spacing-xs);
+      margin-right: var(--spacing-xs);
     }
 
     &-sm {
-      margin-right: var(--mobius-spacing-sm);
+      margin-right: var(--spacing-sm);
     }
 
     &-md {
-      margin-right: var(--mobius-spacing-md);
+      margin-right: var(--spacing-md);
     }
 
     &-lg {
-      margin-right: var(--mobius-spacing-lg);
+      margin-right: var(--spacing-lg);
     }
 
     &-xl {
-      margin-right: var(--mobius-spacing-xl);
+      margin-right: var(--spacing-xl);
     }
 
     &-right {
-      margin-left: var(--mobius-spacing-fluid);
+      margin-left: var(--spacing-fluid);
     }
   }
 
@@ -108,105 +108,105 @@
     &.spacing {
       &--top {
         &-xs {
-          margin-top: calc(-1 * var(--mobius-spacing-xs));
+          margin-top: calc(-1 * var(--spacing-xs));
         }
 
         &-sm {
-          margin-top: calc(-1 * var(--mobius-spacing-sm));
+          margin-top: calc(-1 * var(--spacing-sm));
         }
 
         &-md {
-          margin-top: calc(-1 * var(--mobius-spacing-md));
+          margin-top: calc(-1 * var(--spacing-md));
         }
 
         &-lg {
-          margin-top: calc(-1 * var(--mobius-spacing-lg));
+          margin-top: calc(-1 * var(--spacing-lg));
         }
 
         &-xl {
-          margin-top: calc(-1 * var(--mobius-spacing-xl));
+          margin-top: calc(-1 * var(--spacing-xl));
         }
 
         &-fluid {
-          margin-top: calc(-1 * var(--mobius-spacing-fluid));
+          margin-top: calc(-1 * var(--spacing-fluid));
         }
       }
 
       &--left {
         &-xs {
-          margin-left: calc(-1 * var(--mobius-spacing-xs));
+          margin-left: calc(-1 * var(--spacing-xs));
         }
 
         &-sm {
-          margin-left: calc(-1 * var(--mobius-spacing-sm));
+          margin-left: calc(-1 * var(--spacing-sm));
         }
 
         &-md {
-          margin-left: calc(-1 * var(--mobius-spacing-md));
+          margin-left: calc(-1 * var(--spacing-md));
         }
 
         &-lg {
-          margin-left: calc(-1 * var(--mobius-spacing-lg));
+          margin-left: calc(-1 * var(--spacing-lg));
         }
 
         &-xl {
-          margin-left: calc(-1 * var(--mobius-spacing-xl));
+          margin-left: calc(-1 * var(--spacing-xl));
         }
 
         &-fluid {
-          margin-left: calc(-1 * var(--mobius-spacing-fluid));
+          margin-left: calc(-1 * var(--spacing-fluid));
         }
       }
 
       &--bottom {
         &-xs {
-          margin-bottom: calc(-1 * var(--mobius-spacing-xs));
+          margin-bottom: calc(-1 * var(--spacing-xs));
         }
 
         &-sm {
-          margin-bottom: calc(-1 * var(--mobius-spacing-sm));
+          margin-bottom: calc(-1 * var(--spacing-sm));
         }
 
         &-md {
-          margin-bottom: calc(-1 * var(--mobius-spacing-md));
+          margin-bottom: calc(-1 * var(--spacing-md));
         }
 
         &-lg {
-          margin-bottom: calc(-1 * var(--mobius-spacing-lg));
+          margin-bottom: calc(-1 * var(--spacing-lg));
         }
 
         &-xl {
-          margin-bottom: calc(-1 * var(--mobius-spacing-xl));
+          margin-bottom: calc(-1 * var(--spacing-xl));
         }
 
         &-fluid {
-          margin-bottom: calc(-1 * var(--mobius-spacing-fluid));
+          margin-bottom: calc(-1 * var(--spacing-fluid));
         }
       }
 
       &--right {
         &-xs {
-          margin-right: calc(-1 * var(--mobius-spacing-xs));
+          margin-right: calc(-1 * var(--spacing-xs));
         }
 
         &-sm {
-          margin-right: calc(-1 * var(--mobius-spacing-sm));
+          margin-right: calc(-1 * var(--spacing-sm));
         }
 
         &-md {
-          margin-right: calc(-1 * var(--mobius-spacing-md));
+          margin-right: calc(-1 * var(--spacing-md));
         }
 
         &-lg {
-          margin-right: calc(-1 * var(--mobius-spacing-lg));
+          margin-right: calc(-1 * var(--spacing-lg));
         }
 
         &-xl {
-          margin-right: calc(-1 * var(--mobius-spacing-xl));
+          margin-right: calc(-1 * var(--spacing-xl));
         }
 
         &-right {
-          margin-left: calc(-1 * var(--mobius-spacing-fluid));
+          margin-left: calc(-1 * var(--spacing-fluid));
         }
       }
     }
