--- a/src/components/content/Container/Container.module.scss
+++ b/src/components/content/Container/Container.module.scss
@@ -6,9 +6,9 @@
   display: flex;
 
   &__image {
-    margin-right: var(--mobius-spacing-md);
-    padding: var(--mobius-spacing-md);
-    width: calc(4em + var(--mobius-spacing-md) * 2);
+    margin-right: var(--spacing-md);
+    padding: var(--spacing-md);
+    width: calc(4em + var(--spacing-md) * 2);
 
     svg {
       display: block;
