--- a/src/components/content/Longform/Longform.module.scss
+++ b/src/components/content/Longform/Longform.module.scss
@@ -2,23 +2,23 @@
 
 .longform {
   h1 {
-    margin-bottom: var(--mobius-spacing-lg);
+    margin-bottom: var(--spacing-lg);
   }
 
   h2 {
-    margin-bottom: var(--mobius-spacing-md);
+    margin-bottom: var(--spacing-md);
   }
 
   h3,
   h4,
   h5 {
-    margin-bottom: var(--mobius-spacing-sm);
+    margin-bottom: var(--spacing-sm);
   }
 
   p,
   ul,
   ol {
-    margin-bottom: var(--mobius-spacing-md);
+    margin-bottom: var(--spacing-md);
   }
 
   ul,
@@ -27,7 +27,7 @@
   }
 
   li {
-    margin-bottom: var(--mobius-spacing-sm);
+    margin-bottom: var(--spacing-sm);
 
     p:last-child {
       margin-bottom: 0;
@@ -41,7 +41,7 @@
     h3,
     h4,
     h5 {
-      margin-top: var(--mobius-spacing-lg);
+      margin-top: var(--spacing-lg);
     }
   }
 
@@ -51,6 +51,6 @@
 
   table,
   img {
-    margin: var(--mobius-spacing-lg) 0;
+    margin: var(--spacing-lg) 0;
   }
 }
