--- a/src/components/controls/Button/Button.module.scss
+++ b/src/components/controls/Button/Button.module.scss
@@ -3,14 +3,14 @@
 .button {
   $types: primary, secondary, positive, negative, inverse;
   @include button.default;
-  border-color: var(--mobius-button-border-color);
+  border-color: var(--button-border-color);
 
   &:hover {
-    border-color: var(--mobius-button-border-color-hover);
+    border-color: var(--button-border-color-hover);
   }
 
   &:focus-within {
-    border-color: var(--mobius-button-border-color-focus);
+    border-color: var(--button-border-color-focus);
   }
 
   &:active {
@@ -27,10 +27,10 @@
 
   &--icon {
     aspect-ratio: 1;
-    line-height: var(--mobius-font-line-height);
+    line-height: var(--font-line-height);
     min-height: 0;
     min-width: 0;
-    padding: var(--mobius-spacing-xs) var(--mobius-spacing-sm);
+    padding: var(--spacing-xs) var(--spacing-sm);
   }
 
   &--block {
@@ -51,25 +51,25 @@
   &--small {
     min-height: 2.25rem;
     min-width: 5.5rem;
-    padding: calc(var(--mobius-spacing-xs) - var(--mobius-button-border-width))
-      var(--mobius-spacing-sm);
+    padding: calc(var(--spacing-xs) - var(--button-border-width))
+      var(--spacing-sm);
   }
 
   @each $type in $types {
     &--#{$type} {
-      background: var(--mobius-button-background-#{$type});
-      border-color: var(--mobius-button-border-color-#{$type});
-      color: var(--mobius-button-color-#{$type});
+      background: var(--button-background-#{$type});
+      border-color: var(--button-border-color-#{$type});
+      color: var(--button-color-#{$type});
 
       &:hover {
-        background: var(--mobius-button-background-hover-#{$type});
-        border-color: var(--mobius-button-border-color-hover-#{$type});
-        color: var(--mobius-button-color-hover-#{$type});
+        background: var(--button-background-hover-#{$type});
+        border-color: var(--button-border-color-hover-#{$type});
+        color: var(--button-color-hover-#{$type});
       }
 
       &:focus-within {
-        background: var(--mobius-button-background-focus-#{$type});
-        border-color: var(--mobius-button-border-color-focus-#{$type});
+        background: var(--button-background-focus-#{$type});
+        border-color: var(--button-border-color-focus-#{$type});
       }
     }
   }
