--- a/src/components/controls/Menubar/Menubar.module.scss
+++ b/src/components/controls/Menubar/Menubar.module.scss
@@ -6,7 +6,7 @@ $menubar-highlight-width: 4px;
 
 @mixin menubar-link {
   color: var(--skin-link-color);
-  transition: background var(--mobius-transition);
+  transition: background var(--transition);
 
   &:hover,
   &:active {
@@ -34,7 +34,7 @@ $menubar-highlight-width: 4px;
     width: 100%;
 
     @media (min-width: breakpoint.$tablet) {
-      padding: 0 var(--mobius-spacing-md);
+      padding: 0 var(--spacing-md);
     }
   }
 
@@ -64,9 +64,7 @@ $menubar-highlight-width: 4px;
         opacity: 0;
         position: absolute;
         top: 0;
-        transition:
-          opacity var(--mobius-transition),
-          height var(--mobius-transition);
+        transition: opacity var(--transition) height var(--transition);
         width: 100%;
       }
 
@@ -82,8 +80,8 @@ $menubar-highlight-width: 4px;
         font-size: font.$size-sm;
         font-weight: font.$weight-bold;
         justify-content: center;
-        min-height: var(--mobius-spacing-thumb);
-        padding: var(--mobius-spacing-md);
+        min-height: var(--spacing-thumb);
+        padding: var(--spacing-md);
         text-align: center;
       }
     }
@@ -124,8 +122,8 @@ $menubar-highlight-width: 4px;
       display: block;
       font-size: font.$size-sm;
       font-weight: font.$weight-bold;
-      min-height: var(--mobius-spacing-thumb);
-      padding: var(--mobius-spacing-md);
+      min-height: var(--spacing-thumb);
+      padding: var(--spacing-md);
     }
   }
 }
