--- a/src/styles/mixins/button.scss
+++ b/src/styles/mixins/button.scss
@@ -1,20 +1,20 @@
 @mixin base {
   appearance: none;
-  border: var(--mobius-button-border-width) solid transparent;
+  border: var(--button-border-width) solid transparent;
   cursor: pointer;
   display: inline-block;
   line-height: 1.75;
-  min-height: var(--mobius-spacing-thumb);
+  min-height: var(--spacing-thumb);
   min-width: 6.5em;
-  padding: calc(var(--mobius-spacing-sm) - var(--mobius-button-border-width))
-    var(--mobius-spacing-md);
+  padding: calc(var(--spacing-sm) - var(--button-border-width))
+    var(--spacing-md);
   text-align: center;
   text-decoration: none;
   transition:
-    opacity var(--mobius-transition),
-    background var(--mobius-transition),
-    border-color var(--mobius-transition),
-    filter var(--mobius-transition);
+    opacity var(--transition),
+    background var(--transition),
+    border-color var(--transition),
+    filter var(--transition);
   user-select: none;
 
   &:active {
@@ -24,15 +24,15 @@
 
 @mixin default {
   @include base;
-  background: var(--mobius-button-background);
-  border-radius: var(--mobius-button-border-radius);
-  color: var(--mobius-button-color);
+  background: var(--button-background);
+  border-radius: var(--button-border-radius);
+  color: var(--button-color);
   cursor: pointer;
-  font-weight: var(--mobius-font-weight-bold);
+  font-weight: var(--font-weight-bold);
 
   &:hover {
-    background: var(--mobius-button-background-hover);
-    color: var(--mobius-button-color-hover);
+    background: var(--button-background-hover);
+    color: var(--button-color-hover);
   }
 
   &:focus {
@@ -40,6 +40,6 @@
   }
 
   &:focus-within {
-    background: var(--mobius-button-background-focus);
+    background: var(--button-background-focus);
   }
 }
