--- a/src/styles/mixins/title.scss
+++ b/src/styles/mixins/title.scss
@@ -5,7 +5,7 @@
   font-weight: var(--heading-font-weight, 700);
   letter-spacing: -0.025em;
   line-height: font.$line-height-sm;
-  margin-bottom: var(--mobius-spacing-xs);
+  margin-bottom: var(--spacing-xs);
   margin-top: 0;
 
   b,
