feat: input variables

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @use '~@etchteam/mobius-variables/dist';
 
 @use 'variables/font-new';
+@use 'variables/input';
 @use 'variables/button';
 @use 'variables/spacing';
 @use 'variables/transition';
