feat: colour variables

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @use '~normalize.css/normalize';
 @use '~@etchteam/mobius-variables/dist';
 
+@use 'variables/color-new';
 @use 'variables/font-new';
 @use 'variables/input';
 @use 'variables/button';
