--- a/src/components/controls/Dropdown/Dropdown.module.scss
+++ b/src/components/controls/Dropdown/Dropdown.module.scss
@@ -1,12 +1,10 @@
-@use '../../../styles/variables/color';
-
 .dropdown {
   display: inline-block;
   position: relative;
   vertical-align: middle;
 
   &__content {
-    background: color.$white;
+    background: var(--color-white);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     left: auto;
     min-width: 8em;
