--- a/src/components/controls/TextButton/TextButton.module.scss
+++ b/src/components/controls/TextButton/TextButton.module.scss
@@ -1,4 +1,3 @@
-@use '../../../styles/variables/color';
 @use '../../../styles/variables/font';
 
 .text-button {
@@ -13,7 +12,7 @@
     color var(--transition);
 
   &[disabled] {
-    color: color.$blue-dark;
+    color: var(--button-color-disabled);
     cursor: not-allowed;
     opacity: 0.5;
   }
@@ -23,7 +22,7 @@
   }
 
   &:focus-visible {
-    outline: 1px solid color.$blue;
+    outline: 1px solid var(--button-border-color-focus);
     outline-offset: var(--spacing-sm);
   }
 
