fix: minor colour fixes

--- a/src/styles/mixins/forms.scss
+++ b/src/styles/mixins/forms.scss
@@ -101,7 +101,7 @@
 
 @mixin label() {
   align-items: center;
-  color: var(--color-body);
+  color: var(--skin-color);
   display: flex;
   font-size: font.$size-base;
   font-weight: font.$weight-bold;
