feat: install new fonts

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
 @use 'variables/spacing';
 @use 'variables/transition';
 
+@use 'base/fonts';
 @use 'base/skins';
 @use 'base/scaffolding';
 @use 'base/typography';
