--- a/src/styles/mixins/title.scss
+++ b/src/styles/mixins/title.scss
@@ -2,6 +2,7 @@
 
 @mixin title {
   color: var(--skin-heading-color);
+  font-family: var(--font-family-heading);
   font-weight: var(--heading-font-weight, 700);
   letter-spacing: -0.025em;
   line-height: font.$line-height-sm;
