feat: swap out font variables

--- a/src/components/canvas/Card/Card.module.scss
+++ b/src/components/canvas/Card/Card.module.scss
@@ -1,5 +1,3 @@
-@use '../../../styles/variables/font';
-
 .card {
   background: var(--skin-background);
   border: 1px solid transparent;
@@ -15,7 +13,7 @@
   &__arrow {
     color: var(--skin-link-color);
     float: right;
-    font-size: font.$size-xl;
+    font-size: var(--font-size-xl);
     padding: var(--spacing-md);
   }
 
