--- a/src/components/content/Longform/Longform.module.scss
+++ b/src/components/content/Longform/Longform.module.scss
@@ -1,5 +1,3 @@
-@use '../../../styles/variables/font';
-
 .longform {
   h1 {
     margin-bottom: var(--spacing-lg);
@@ -23,7 +21,7 @@
 
   ul,
   ol {
-    padding-left: font.$line-height * 1rem;
+    padding-left: calc(var(--font-line-height) * 1rem);
   }
 
   li {
