--- a/src/components/controls/Datepicker/Datepicker.module.scss
+++ b/src/components/controls/Datepicker/Datepicker.module.scss
@@ -1,5 +1,3 @@
-@use 'sass:math';
-@use '../../../styles/variables/font';
 @use '../../../styles/variables/color';
 @use '../../../styles/mixins/forms';
 
@@ -14,7 +12,7 @@
     border-top-left-radius: var(--input-border-radius);
     color: color.$blue-dark;
     cursor: pointer;
-    font-size: font.$size-xl;
+    font-size: var(--font-size-xl);
     line-height: 1.75;
     padding: 0 calc(var(--input-padding-horizontal) / 2) 0
       calc(var(--input-padding-horizontal) / 2);
@@ -61,8 +59,8 @@
 
     &-caption-label {
       color: color.$blue-dark;
-      font-size: font.$size-sm;
-      font-weight: font.$weight-bold;
+      font-size: var(--font-size-sm);
+      font-weight: var(--font-weight-bold);
       margin: 0;
       padding: 0;
       text-transform: uppercase;
@@ -70,8 +68,8 @@
 
     &-head-cell {
       color: color.$blue-dark;
-      font-size: font.$size-sm;
-      font-weight: font.$weight-base;
+      font-size: var(--font-size-sm);
+      font-weight: var(--font-weight-base);
       height: var(--rdp-cell-size);
       padding: 0;
       text-align: center;
@@ -86,7 +84,7 @@
     &-day {
       border-radius: var(--input-border-radius);
       color: color.$blue-darkest;
-      font-size: font.$size-sm;
+      font-size: var(--font-size-sm);
       height: var(--rdp-cell-size);
       text-align: center;
       transition: background var(--transition);
@@ -130,9 +128,9 @@
 
     &-dropdown-icon {
       color: color.$blue;
-      height: font.$size-sm;
+      height: var(--font-size-sm);
       margin: -1px 0 0 var(--spacing-xs);
-      width: font.$size-sm;
+      width: var(--font-size-sm);
     }
   }
 
