--- a/src/components/controls/Select/Select.module.scss
+++ b/src/components/controls/Select/Select.module.scss
@@ -1,4 +1,3 @@
-@use '../../../styles/variables/font';
 @use '../../../styles/mixins/forms';
 
 .select {
@@ -26,7 +25,7 @@
     bottom: 0;
     color: var(--skin-link-color);
     display: flex;
-    font-size: font.$size-xl;
+    font-size: var(--font-size-xl);
     justify-content: center;
     min-width: var(--spacing-thumb);
     padding: 0 var(--spacing-sm);
