--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,4 +1,3 @@
-@use '../variables/font';
 @use '../mixins/title';
 
 :root {
@@ -6,10 +5,10 @@
 }
 
 body {
-  font-family: font.$family;
-  font-size: font.$size-base;
+  font-family: var(--font-family);
+  font-size: var(--font-size-base);
   -webkit-font-smoothing: antialiased;
-  line-height: font.$line-height;
+  line-height: var(--font-line-height);
 }
 
 h1,
@@ -20,24 +19,24 @@ h4 {
 }
 
 h1 {
-  font-size: font.$size-h1;
-  font-weight: font.$weight-black;
+  font-size: var(--font-size-h1);
+  font-weight: var(--font-weight-black);
 }
 
 h2 {
-  font-size: font.$size-h2;
+  font-size: var(--font-size-h2);
 }
 
 h3 {
-  font-size: font.$size-h3;
+  font-size: var(--font-size-h3);
 }
 
 h4 {
-  font-size: font.$size-h4;
+  font-size: var(--font-size-h4);
 }
 
 p {
-  line-height: font.$line-height-lg;
+  line-height: var(--font-line-height-lg);
   margin-bottom: var(--spacing-sm);
   margin-top: 0;
 
@@ -59,5 +58,5 @@ a {
 b,
 strong,
 th {
-  font-weight: font.$weight-bold;
+  font-weight: var(--font-weight-bold);
 }
