feat: help text styles

--- a/src/components/content/HelpText/HelpText.module.scss
+++ b/src/components/content/HelpText/HelpText.module.scss
@@ -1,13 +1,15 @@
 .help-text {
+  background-color: var(--color-neutral-light);
   color: var(--color-body);
   font-size: var(--font-size-sm);
-  padding-top: var(--spacing-sm);
+  margin-top: var(--spacing-sm);
+  padding: var(--spacing-sm) var(--spacing-md);
 
   &--positive {
-    color: var(--color-positive);
+    background: var(--color-positive-light);
   }
 
   &--negative {
-    color: var(--color-negative);
+    background: var(--color-negative-light);
   }
 }
