--- a/src/components/content/BarStack/BarStack.module.scss
+++ b/src/components/content/BarStack/BarStack.module.scss
@@ -4,18 +4,22 @@ $bar-stack-border-radius: 0.25rem;
 $bar-stack-item-height: 1.5rem;
 
 .bar-stack {
-  background: var(--color-background);
-  border-radius: $bar-stack-border-radius;
+  --bar-stack-border-radius: 0.25rem;
+  --bar-stack-item-height: 1.5rem;
+  --bar-stack-background: var(--mobius-color-forest-25);
+
+  background: var(--bar-stack-background);
+  border-radius: var(--bar-stack-border-radius);
   display: flex;
   overflow: hidden;
   width: 100%;
 
   &__item {
-    height: $bar-stack-item-height;
+    height: var(--bar-stack-item-height);
 
     &:last-child {
-      border-bottom-right-radius: $bar-stack-border-radius;
-      border-top-right-radius: $bar-stack-border-radius;
+      border-bottom-right-radius: var(--bar-stack-border-radius);
+      border-top-right-radius: var(--bar-stack-border-radius);
     }
 
     &--color {
