--- a/src/components/controls/Collapse/Collapse.module.scss
+++ b/src/components/controls/Collapse/Collapse.module.scss
@@ -11,6 +11,10 @@
     padding: 0;
     text-align: left;
     width: 100%;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   &__collapsible {
