--- a/src/components/content/Icon/Icon.module.scss
+++ b/src/components/content/Icon/Icon.module.scss
@@ -1,9 +1,9 @@
 @use '../../../styles/variables/color';
 @use '../../../styles/variables/font';
 
-$icon-size-giant: 3.5em;
-
 .icon {
+  --icon-size-giant: 3.5em;
+
   display: inline-block;
   height: 1em;
   vertical-align: middle;
@@ -44,6 +44,6 @@ $icon-size-giant: 3.5em;
   }
 
   &--giant {
-    font-size: $icon-size-giant;
+    font-size: var(--icon-size-giant);
   }
 }
