--- a/src/components/controls/Datepicker/Datepicker.module.scss
+++ b/src/components/controls/Datepicker/Datepicker.module.scss
@@ -1,4 +1,3 @@
-@use '../../../styles/variables/color';
 @use '../../../styles/mixins/forms';
 
 .date-picker {
@@ -10,7 +9,7 @@
     border-bottom-left-radius: var(--input-border-radius);
     border-right: 1px solid var(--input-border);
     border-top-left-radius: var(--input-border-radius);
-    color: color.$blue-dark;
+    color: var(--input-color);
     cursor: pointer;
     font-size: var(--font-size-xl);
     line-height: 1.75;
@@ -22,7 +21,7 @@
 
     &:hover,
     &:focus {
-      background: var(--color-white);
+      background: var(--input-background-focus);
       border-color: var(--input-border-hover);
     }
   }
@@ -38,8 +37,8 @@
 
   &__daypicker {
     --rdp-cell-size: 2rem;
-    --rdp-accent-color: #{color.$blue};
-    --rdp-background-color: #{color.$blue-light}; // hover color
+    --rdp-accent-color: var(--color-link);
+    --rdp-background-color: var(--input-border-hover); // hover color
     --rdp-outline: 2px solid var(--rdp-accent-color);
 
     background: var(--color-white);
@@ -58,7 +57,7 @@
     }
 
     &-caption-label {
-      color: color.$blue-dark;
+      color: var(--color-link);
       font-size: var(--font-size-sm);
       font-weight: var(--font-weight-bold);
       margin: 0;
@@ -67,7 +66,7 @@
     }
 
     &-head-cell {
-      color: color.$blue-dark;
+      color: var(--color-body);
       font-size: var(--font-size-sm);
       font-weight: var(--font-weight-base);
       height: var(--rdp-cell-size);
@@ -83,7 +82,7 @@
 
     &-day {
       border-radius: var(--input-border-radius);
-      color: color.$blue-darkest;
+      color: var(--color-body);
       font-size: var(--font-size-sm);
       height: var(--rdp-cell-size);
       text-align: center;
@@ -99,15 +98,14 @@
       &,
       &:hover,
       &:focus {
-        background: color.$blue !important;
-        color: var(--color-white) !important;
+        background: var(--color-neutral-light) !important;
       }
     }
 
     &-nav-button {
       align-items: center;
       border-radius: var(--input-border-radius);
-      color: color.$blue;
+      color: var(--color-body);
       display: inline-flex;
       height: 1.65rem;
       justify-content: center;
@@ -127,7 +125,7 @@
     }
 
     &-dropdown-icon {
-      color: color.$blue;
+      color: var(--color-body);
       height: var(--font-size-sm);
       margin: -1px 0 0 var(--spacing-xs);
       width: var(--font-size-sm);
