--- a/src/styles/base/_forms.scss
+++ b/src/styles/base/_forms.scss
@@ -10,18 +10,25 @@ fieldset {
   background-image: url("data:image/svg+xml,%3Csvg width='23' height='14' viewBox='0 0 23 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.70711 0.29289C8.09763 0.68342 8.09763 1.31658 7.70711 1.70711L2.4142 7L7.70711 12.2929C8.09763 12.6834 8.09763 13.3166 7.70711 13.7071C7.31658 14.0976 6.6834 14.0976 6.2929 13.7071L0.292899 7.7071C-0.0976012 7.3166 -0.0976011 6.6834 0.292899 6.2929L6.2929 0.29289C6.6834 -0.09763 7.31658 -0.09763 7.70711 0.29289Z' fill='%234D6B87'/%3E%3Cpath d='M15.2929 13.7071C14.9024 13.3166 14.9024 12.6834 15.2929 12.2929L20.5858 7L15.2929 1.7071C14.9024 1.3166 14.9024 0.6834 15.2929 0.2929C15.6834 -0.0975999 16.3166 -0.0975999 16.7071 0.2929L22.7071 6.2929C23.0976 6.6834 23.0976 7.3166 22.7071 7.7071L16.7071 13.7071C16.3166 14.0976 15.6834 14.0976 15.2929 13.7071Z' fill='%234D6B87'/%3E%3C/svg%3E");
   background-position: center;
   background-repeat: no-repeat;
-  border: 1px solid var(--input-color);
-  border-radius: 0.25rem;
-  height: 2rem;
-  margin-top: 0.25rem;
+  border: 1px solid var(--input-border-hover);
+  border-radius: calc(var(--spacing-thumb) / 2);
+  height: var(--spacing-thumb);
+  margin-top: 0.5rem;
   position: relative;
-  width: 2.25rem;
+  width: var(--spacing-thumb);
   z-index: 2;
 }
 
+@mixin thumb-disabled {
+  background-color: var(--input-background-disabled);
+  border-color: var(--input-border);
+  cursor: not-allowed;
+  pointer-events: none;
+}
+
 @mixin track {
-  border-radius: 0.25rem;
-  height: 0.5rem;
+  border-radius: 0.5rem;
+  height: 1rem;
   position: relative;
 }
 
@@ -29,7 +36,7 @@ fieldset {
   appearance: none;
   background: transparent;
   cursor: pointer;
-  height: 2rem;
+  height: var(--spacing-thumb);
   position: relative;
   width: 100%;
 
@@ -49,5 +56,15 @@ fieldset {
   &::-moz-range-thumb {
     @include thumb;
     height: 1.9rem;
+  }
+
+  &[disabled] {
+    &::-webkit-slider-thumb {
+      @include thumb-disabled;
+    }
+
+    &::-moz-range-thumb {
+      @include thumb-disabled;
+    }
   }
 }
